--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -4,7 +4,7 @@
     <p style="font-size: 20pt">
         This example application is designated to demonstrate how to build a RESTful application using the cutting-edge technologies, including 
         :<br/>
-        1. AngluarJS/Bootstrap as frontend         <br/>
+        1. AngularJS/Bootstrap as frontend         <br/>
         2. Spring MVC as backend REST API producers        <br/>
         3. JPA 2.1/Spring Data JPA/Hibnerate 4.3 is responsible for data persistence <br/>
     </p>
